catkin_w_s/logs/control_scripts/build.make.107.log.stderr
/home/subho/catkin_w_s/src/control_scripts/src/scripts/root_controller.cpp: In function ‘int main(int, char**)’:
/home/subho/catkin_w_s/src/control_scripts/src/scripts/root_controller.cpp:43:1: error: expected ‘}’ at end of input
   43 | }
      | ^
/home/subho/catkin_w_s/src/control_scripts/src/scripts/root_controller.cpp:7:32: note: to match this ‘{’
    7 | int main(int argc, char **argv){
      |                                ^
make[2]: *** [CMakeFiles/root_controller.dir/build.make:63: CMakeFiles/root_controller.dir/src/scripts/root_controller.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:211: CMakeFiles/root_controller.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
